--- a/components/shell/ShellNowPlaying.module.css
+++ b/components/shell/ShellNowPlaying.module.css
@@ -1,7 +1,7 @@
 .wrapper {
-  width: 340px;
-  min-width: 340px;
+  width: 100%;
   height: 100%;
+  min-width: 0;
   min-height: 0;
   overflow: hidden;
 }
